11/03/19
********
Feature: Implemented tooltip showing item stats and explanation of player stats
Feature: Implemented toggle to show/hide tooltips in status menu\
Polish: Made further refinements to game balance

11/02/19
********
Feature: Reworked equip system to support two-handed and offhand equips and work across all character stats
Feature: Updated status menu to show offhand equips
Feature: Implemented block, based on stats + equips for players and set directly for enemies
Feature: Implemented crit chance, based on stats + equips for players and set directly for enemies
Feature: Implemented hit chance, based on weapon equip for players and set directly for enemies
Feature: Added level up and ability level up notification after battle
Feature: Added equation-based stat gain and set initial balance for all stats
Feature: Changed MP (mana/magic points) to SP (sync points) in preparation for real game's theme

11/01/19
********
Feature: Implemented evade, based on stats + equips for players and set directly for enemies
Feature: Added Wooden Shield and Iron Shield - still need to implement shields, offhand equips, and block
Polish: Corrected how player stats are carried over after battle

10/31/19
********
Feature: Implemented accessories, including Ring of Heat and Ring of Freeze that modify elemental resistances
Feature: Implemented player basic attack switching between melee/ranged based on equipped weapon
Feature: Implemented ability to toggle players between front and back row for combat
Battle: Implemented row checking and updated damage calculations to incorporate row for melee attacks
Polish: Updated shop UI to allow longer item descriptions
Polish: Updated AP to next ability level curve
Polish: Updated EXP and AP rewards in random battles
Bug: Corrected half of "Back" button in Status menu not registering a click

10/30/19
********
Feature: Implemented equipment affecting new dmgWeapon / defWeapon / defTech parameters