@@ -49,7 +49,7 @@ MonoBehaviour:
   equippedOff: 
   equippedArmr: 
   equippedAccy: 
-  currentHP: 170
+  currentHP: 120
   currentSP: 20
   strength: 8
   tech: 12
@@ -76,9 +76,9 @@ MonoBehaviour:
   - 1
   - 1
   - 1
-  baseHP: 135
+  baseHP: 85
   baseSP: 20
-  maxHP: 170
+  maxHP: 120
   maxSP: 20
   inFrontRow: 1
   playerLevel: 1
@@ -160,7 +160,7 @@ MonoBehaviour:
   equippedOff: 
   equippedArmr: 
   equippedAccy: 
-  currentHP: 200
+  currentHP: 150
   currentSP: 10
   strength: 11
   tech: 6
@@ -187,9 +187,9 @@ MonoBehaviour:
   - 1
   - 1
   - 1
-  baseHP: 150
+  baseHP: 100
   baseSP: 10
-  maxHP: 200
+  maxHP: 150
   maxSP: 10
   inFrontRow: 1
   playerLevel: 1
@@ -407,7 +407,7 @@ MonoBehaviour:
   equippedOff: 
   equippedArmr: 
   equippedAccy: 
-  currentHP: 170
+  currentHP: 120
   currentSP: 20
   strength: 8
   tech: 12
@@ -434,9 +434,9 @@ MonoBehaviour:
   - 1
   - 1
   - 1
-  baseHP: 135
+  baseHP: 85
   baseSP: 20
-  maxHP: 170
+  maxHP: 120
   maxSP: 20
   inFrontRow: 1
   playerLevel: 1
