@@ -102,6 +102,7 @@ MonoBehaviour:
   isShield: 0
   itemName: Health Potion
   description: A mild healing brew.
+  tier: Common
   value: 5
   itemSprite: {fileID: 21300000, guid: 0bc4ed27aef38a44bb72e80f9beb5326, type: 3}
   affectHP: 1
