@@ -102,6 +102,7 @@ MonoBehaviour:
   isShield: 0
   itemName: Mana Potion
   description: Seethes with mystical power.
+  tier: Common
   value: 10
   itemSprite: {fileID: 21300004, guid: 0bc4ed27aef38a44bb72e80f9beb5326, type: 3}
   affectHP: 0
