@@ -38370,7 +38370,7 @@ RectTransform:
   m_LocalEulerAnglesHint: {x: 0, y: 0, z: 0}
   m_AnchorMin: {x: 0, y: 1}
   m_AnchorMax: {x: 0, y: 1}
-  m_AnchoredPosition: {x: 149, y: -51.30005}
+  m_AnchoredPosition: {x: 149, y: -51.299805}
   m_SizeDelta: {x: 257.6, y: 65.6}
   m_Pivot: {x: 0.5, y: 0.5}
 --- !u!222 &6445499817208813534
